[package]
name = "robotics"
version = "0.1.0"
authors = ["Alok Puranik <alokpuranik1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ndarray = "0.15.4"
ndarray-linalg = { version = "0.14.1", features = ["openblas"]}
expect-test = "1.2.2"
rand = "0.8.5"
priority-queue = "1.2.1"
ordered-float = "2.10.0"
